--- a/projeto-1/css/experiencia.css
+++ b/projeto-1/css/experiencia.css
@@ -26,6 +26,7 @@
 .empresa {
   display: grid;
   grid-template-columns: 1fr, 1fr;
+  gap: 10px 20px;
   padding: 20px;
   background: #f5f5f5;
   margin-bottom: 20px;
@@ -34,12 +35,46 @@
 }
 
 .empresa::before {
-  
+  content: " ";
+  display: block;
+  width: 4px;
+  height: 20px;
+  background: linear-gradient(#b6f829, #67dd0a);
+  position: absolute;
+  top: 20px;
+  left: -4px;
 }
+
 .empresa-ano {
   position: absolute;
   top: 20px;
   left: -100px;
   color: #525252;
   font-size: 0.875rem;
+}
+
+.empresa-titulo {
+  font-size: 1.125rem;
+  line-height: 1.1;
+  font-weight: bold;
+}
+
+.empresa-texto {
+  font-size: 0.875rem;
+  line-height: 1.4;
+  color: #525252;
+}
+
+.empresa-habilidades {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-content: start;
+}
+
+.empresa-habilidades li {
+  font-size: 0.875rem;
+  line-height: 1.4;
+  border-radius: 4px;
+  background: #fff;
 }
