--- a/projeto-1/css/experiencia.css
+++ b/projeto-1/css/experiencia.css
@@ -19,13 +19,13 @@
   color: #525252;
 }
 
-.experiencia-texto .strong {
+.experiencia-texto strong {
   color: #141414;
 }
 
 .empresa {
   display: grid;
-  grid-template-columns: 1fr, 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 10px 20px;
   padding: 20px;
   background: #f5f5f5;
@@ -35,7 +35,7 @@
 }
 
 .empresa::before {
-  content: " ";
+  content: "";
   display: block;
   width: 4px;
   height: 20px;
@@ -83,22 +83,29 @@
 }
 
 @media (max-width: 800px) {
-  img {
-    max-width: 100%;
-    display: block;
+  .experiencia {
+    grid-template-columns: 1fr;
+    gap: 40px;
   }
 
-  .subtitulo {
-    font-size: 8rem;
-    line-height: 1;
-    text-transform: uppercase;
-    word-break: break-all;
-    max-width: 4ch;
+  .experiencia .subtitulo {
+    color: #141414;
+  }
+
+  .experiencia-texto {
+    font-size: 1.25rem;
+  }
+
+  .empresa-ano {
+    position: initial;
+    order: 1;
+    width: initial;
+    text-align: left;
   }
 }
 
 @media (max-width: 800px) {
-  .subtitulo
-    font-size: 3rem;
-
+  .empresa {
+    grid-template-columns: 1fr;
+  }
 }
